--- a/index.html
+++ b/index.html
@@ -380,14 +380,14 @@
                                 <a class="address-link" href="">г. Киев, пр-т Леси Украинки, 26</a>
                             </li>
                             <li>
-                                <a class="contact-link" href="mailto:info@devstudio.com"
-                                    >info@devstudio.com</a
-                                >
+                                <a class="contact-link" href="mailto:info@devstudio.com"></a>
+                                    info@devstudio.com
+                                </a>
                             </li>
                             <li>
-                                <a class="contact-link" href="tel:+380961111111"
-                                    >+38 096 111 11 11</a
-                                >
+                                <a class="contact-link" href="tel:+380961111111">
+                                    +38 096 111 11 11
+                                </a>
                             </li>
                         </ul>
                     </address>
