--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
                     </ul>
                 </div>
             </section>
+
         </main>
         <!-- footer -->
         <footer class="footer">
@@ -380,7 +381,7 @@
                                 <a class="address-link" href="">г. Киев, пр-т Леси Украинки, 26</a>
                             </li>
                             <li>
-                                <a class="contact-link" href="mailto:info@devstudio.com"></a>
+                                <a class="contact-link" href="mailto:info@devstudio.com">
                                     info@devstudio.com
                                 </a>
                             </li>
