Убраны лишние файлы

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li>
                         <a class="contact-link" href="mailto:info@devstudio.com">
                             <svg class="contact-link-icon" width="16" height="12">
-                                <use href="./images/icons_orig.svg#envelope"></use>
+                                <use href="./images/icons.svg#envelope"></use>
                             </svg>
                             info@devstudio.com
                         </a>
@@ -43,7 +43,7 @@
                     <li>
                         <a class="contact-link" href="tel:+380961111111">
                             <svg class="contact-link-icon" width="10" height="16">
-                                <use href="./images/icons_orig.svg#smartphone"></use>
+                                <use href="./images/icons.svg#smartphone"></use>
                             </svg>
                             +38 096 111 11 11
                         </a>
@@ -68,7 +68,7 @@
                         <li class="features-item">
                             <div class="features-icon">
                                 <svg width="70" height="70">
-                                    <use href="./images/icons_orig.svg#antenna"></use>
+                                    <use href="./images/icons.svg#antenna"></use>
                                 </svg>
                             </div>
                             <h3 class="features-title">Внимание к деталям</h3>
@@ -81,7 +81,7 @@
                         <li class="features-item">
                             <div class="features-icon">
                                 <svg width="70" height="70">
-                                    <use href="./images/icons_orig.svg#clock"></use>
+                                    <use href="./images/icons.svg#clock"></use>
                                 </svg>
                             </div>
                             <h3 class="features-title">Пунктуальность</h3>
@@ -94,7 +94,7 @@
                         <li class="features-item">
                             <div class="features-icon">
                                 <svg width="70" height="70">
-                                    <use href="./images/icons_orig.svg#diagram"></use>
+                                    <use href="./images/icons.svg#diagram"></use>
                                 </svg>
                             </div>
                             <h3 class="features-title">Планирование</h3>
@@ -107,7 +107,7 @@
                         <li class="features-item">
                             <div class="features-icon">
                                 <svg width="70" height="70">
-                                    <use href="./images/icons_orig.svg#astronaut"></use>
+                                    <use href="./images/icons.svg#astronaut"></use>
                                 </svg>
                             </div>
                             <h3 class="features-title">Современные технологии</h3>
@@ -169,28 +169,28 @@
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#instagram"></use>
+                                            <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#twitter"></use>
+                                            <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#facebook"></use>
+                                            <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#linkedin"></use>
+                                            <use href="./images/icons.svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -209,28 +209,28 @@
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#instagram"></use>
+                                            <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#twitter"></use>
+                                            <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#facebook"></use>
+                                            <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#linkedin"></use>
+                                            <use href="./images/icons.svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -249,28 +249,28 @@
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#instagram"></use>
+                                            <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#twitter"></use>
+                                            <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#facebook"></use>
+                                            <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#linkedin"></use>
+                                            <use href="./images/icons.svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -289,28 +289,28 @@
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#instagram"></use>
+                                            <use href="./images/icons.svg#instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#twitter"></use>
+                                            <use href="./images/icons.svg#twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#facebook"></use>
+                                            <use href="./images/icons.svg#facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="./images/icons_orig.svg#linkedin"></use>
+                                            <use href="./images/icons.svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -326,42 +326,42 @@
                         <li class="customers-item">
                             <a href="" class="customer-link">
                                 <svg class="customer-icon">
-                                    <use href="./images/icons_orig.svg#logo_1"></use>
+                                    <use href="./images/icons.svg#logo_1"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="customers-item">
                             <a href="" class="customer-link">
                                 <svg class="customer-icon">
-                                    <use href="./images/icons_orig.svg#logo_2"></use>
+                                    <use href="./images/icons.svg#logo_2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="customers-item">
                             <a href="" class="customer-link">
                                 <svg class="customer-icon">
-                                    <use href="./images/icons_orig.svg#logo_3"></use>
+                                    <use href="./images/icons.svg#logo_3"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="customers-item">
                             <a href="" class="customer-link">
                                 <svg class="customer-icon">
-                                    <use href="./images/icons_orig.svg#logo_4"></use>
+                                    <use href="./images/icons.svg#logo_4"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="customers-item">
                             <a href="" class="customer-link">
                                 <svg class="customer-icon">
-                                    <use href="./images/icons_orig.svg#logo_5"></use>
+                                    <use href="./images/icons.svg#logo_5"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="customers-item">
                             <a href="" class="customer-link">
                                 <svg class="customer-icon">
-                                    <use href="./images/icons_orig.svg#logo_6"></use>
+                                    <use href="./images/icons.svg#logo_6"></use>
                                 </svg>
                             </a>
                         </li>
@@ -399,28 +399,28 @@
                         <li>
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/icons_orig.svg#instagram"></use>
+                                    <use href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/icons_orig.svg#twitter"></use>
+                                    <use href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/icons_orig.svg#facebook"></use>
+                                    <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/icons_orig.svg#linkedin"></use>
+                                    <use href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
