--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
                     <li>
                         <a class="contact-link" href="mailto:info@devstudio.com">
                             <svg class="contact-link-icon" width="16" height="12">
-                                <use href="./images/icons_orig.svg#envelope"></use>
+                                <use href="./images/icons.svg#envelope"></use>
                             </svg>
                             info@devstudio.com
                         </a>
@@ -43,7 +43,7 @@
                     <li>
                         <a class="contact-link" href="tel:+380961111111">
                             <svg class="contact-link-icon" width="10" height="16">
-                                <use href="./images/icons_orig.svg#smartphone"></use>
+                                <use href="./images/icons.svg#smartphone"></use>
                             </svg>
                             +38 096 111 11 11
                         </a>
@@ -179,28 +179,28 @@
                         <li>
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/icons_orig.svg#instagram"></use>
+                                    <use href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/icons_orig.svg#twitter"></use>
+                                    <use href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/icons_orig.svg#facebook"></use>
+                                    <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/icons_orig.svg#linkedin"></use>
+                                    <use href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
